GloablServices/keshavglobal/force-app/main/default/objects/Service__c/fields/Leaf_Node__c.field-meta.xml
<CustomField>
    <fullName>Leaf_Node__c</fullName>
    <label>Leaf Node</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>