GloablServices/keshavglobal/force-app/main/default/objects/Service__c/fields/Service_Level_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_1_Type__c</fullName>
    <label>Service Level 1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Services</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>Plan Of Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>