GloablServices/keshavglobal/force-app/main/default/objects/Service__c/fields/Service_Level_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_2_Type__c</fullName>
    <label>Service Level 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Level_1_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>