GloablServices/keshavglobal/force-app/main/default/objects/Service__c/fields/Service_Level_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_3_Type__c</fullName>
    <label>Service Level 3 Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Level_2_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD Orders</fullName>
            </value>
            <value>
                <fullName>Medication Administration Record (MAR)</fullName>
            </value>
            <value>
                <fullName>Plan of Care (POC)</fullName>
            </value>
            <value>
                <fullName>Resident Agreement</fullName>
            </value>
            <value>
                <fullName>Nursing Assessment</fullName>
            </value>
            <value>
                <fullName>MDS - Initial</fullName>
            </value>
            <value>
                <fullName>MDS - Ongoing</fullName>
            </value>
            <value>
                <fullName>MDS - Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>