GloablServices/keshavglobal/force-app/main/default/objects/Service__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>