GloablServices/keshavglobal/force-app/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Level_1_Type__c</columns>
    <columns>Service_Level_2_Type__c</columns>
    <columns>Service_Level_3_Type__c</columns>
    <columns>Leaf_Node__c</columns>
    <columns>Service_Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>